--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
+    <style>
+    </style>
 </head>
 <body>
-    <h2>Connexion</h2>
-    <form method="post" th:action="@{/login}">
-    <input type="text" name="username" placeholder="Nom d'utilisateur"/>
-    <input type="password" name="password" placeholder="Mot de passe"/>
-    <button type="submit">Se connecter</button>
-    </form>
-    <p th:if="${error}" th:text="${error}"></p>
+    <div class="container mt-5">
+        <!--         <form method="post" th:action="@{/login}">
+            <input type="text" name="username" placeholder="Nom d'utilisateur"/>
+            <input type="password" name="password" placeholder="Mot de passe"/>
+            <button type="submit">Se connecter</button>
+        </form> -->
+
+
+        <div class="row">
+
+            <div class="col-md-6">
+                            <h2>Administrateur</h2>
+                            <br>
+                <div class="rectangle">
+                    <form method="post" th:action="@{/login}">
+                        <div class="form-identifiant">
+                            <label for="identifiant">Identifiant:</label>
+                            <input type="text" id="identifiant" name="username" placeholder="Nom d'utilisateur" class="form-control"/>
+                        </div>
+                            <div class="row align-items-center">
+                                <div class="form-mdp col-auto">
+                                    <label for="mdp">Mot de passe :</label>
+                                </div>
+                                    <div class="col">
+                                        <input type="password" id="mdp" name="password" placeholder="Mot de passe" class="form-control"/>
+                                        <p th:if="${error}" th:text="${error}"></p>
+                                    </div>
+                            </div>
+                            <br>
+                            <div class="d-flex justify-content-center">
+                                <button class="btn nav-button" type="submit" text-center>Se connecter</button>
+                            </div>
+                    </form>       
+                </div>
+
+            </div>
+                <div class="col-md-6">
+                    <img src="images/logo02.png" alt="Description de l'image" class="img-fluid">
+                </div>
+        </div>        
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
