--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>Bienvenue sur le site</h2>
-    <a href="/login">Se connecter</a>
+    <a href="/login2">Se connecter</a>
 </body>
 </html>
