--- a/src/main/resources/templates/accueilGR.html
+++ b/src/main/resources/templates/accueilGR.html
@@ -11,8 +11,9 @@
     <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <title>Gestion des restaurants</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
+    <main class="flex-grow-1">
     <!-- Titre centré -->
     <div class="titrepage text-center py-1">
         <h3>Tableau de bord</h3>
@@ -62,7 +63,12 @@
         </div>
     </nav>
 
+    </main>
 
+<!-- Footer toujours en bas -->
+  <footer class="text-center py-3">
+    &copy; 2025 - Gourmet Go
+  </footer>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
