--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -11,8 +11,9 @@
     <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <title>Tableau de bord</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
+    <main class="flex-grow-1">
     <!-- Titre centré -->
     <div class="titrepage text-center py-1">
         <h3>Tableau de bord</h3>
@@ -46,8 +47,14 @@
         <img th:src="@{/images/logo02.png}" alt="logo de l'application">
     </div>
 
+    </main>
 
+<!-- Footer avec copyright -->
+<footer class="text-center mt-5 mb-3">
+  &copy; 2025 - GourmetGo
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
 </body>
 </html>
