--- a/src/main/resources/templates/liste_restaurant.html
+++ b/src/main/resources/templates/liste_restaurant.html
@@ -11,7 +11,9 @@
     <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <title>Liste des restaurants</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
+
+    <main class="flex-grow-1">
 
     <!-- Titre centré -->
     <div class="titrepage text-center py-1">
@@ -97,7 +99,11 @@
     </div>
 
 
-
+    </main>
+<!-- Footer avec copyright -->
+<footer class="text-center mt-5 mb-3">
+  &copy; 2025 - GourmetGo
+</footer>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
