--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -5,9 +5,9 @@
     <title>Succès</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
-      /* Définition d'un bleu "électrique" */
+      
       .btn-electric-blue {
-          background-color: #1E90FF; /* Par exemple, DodgerBlue */
+          background-color: #1E90FF; 
           border-color: #1E90FF;
           color: white;
       }
