--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
     background-color: #B8CBD0;
+    padding-top: 144px;
 }
 
 .navbar-custom {
@@ -29,7 +30,6 @@ body {
 }
 .btn-deconnexion:hover {
     background-color: #2c3438;
-    
 }
 
 .titrepage {
@@ -78,4 +78,21 @@ body {
     font-weight: bold;
     background-color: #7A90A4;
     color : white;
+}
+
+/* Page modification */
+.bloc-modif, .bloc-modif-nom, .btn-valider{
+    background-color: #709CA7;
+    border-radius: 15px;
+    padding: 8px 20px;
+    box-shadow: 0 2px 6px black;
+}
+
+.btn-valider:hover{
+    background-color: #2c3438;
+}
+
+.bloc-modif-nom{
+    width: 400px;
+    margin: 0 auto; 
 }
