--- a/src/main/resources/templates/edit_restaurant.html
+++ b/src/main/resources/templates/edit_restaurant.html
@@ -16,13 +16,13 @@
     <main class="flex-grow-1">
 
     <!-- Titre centré -->
-    <div class="titrepage text-center py-1">
+    <div class="titrepage text-center py-1 fixed-top">
         <h3>Tableau de bord</h3>
     </div>
 
     <!-- PREMIERE NAVBAR -->
     <!-- à placer en dehors du container pour prendre toute la page -->
-    <nav class="navbar navbar-expand-md navbar-custom py-1">
+    <nav class="navbar navbar-expand-md navbar-custom py-1 fixed-top" style="top: 48px">
         <div class="container-fluid justify-content-between">
 
             <!-- Bouton burger -->
@@ -45,7 +45,7 @@
     </nav>
 
     <!-- DEUXIEME NAV BAR -->
-    <nav class="navbar navbar-expand-md navbar-custom2 py-1">
+    <nav class="navbar navbar-expand-md navbar-custom2 py-1 fixed-top" style="top: 96px">
         <div class="container-fluid justify-content-between">
             <!-- Bouton burger -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
@@ -70,39 +70,39 @@
             <div class="container my-5">
                 <h2 class="text-center mb-4">Modifier <span th:text="${restaurant.nomResto}">Nom du restaurant</span></h2>
 
-            <form th:action="@{/admin/restaurants/update}" th:object="${restaurant}" method="POST" enctype="multipart/form-data" class="p-4 shadow rounded bg-light">
+            <form th:action="@{/admin/restaurants/update}" th:object="${restaurant}" method="POST" enctype="multipart/form-data" class="p-4">
                 <input type="hidden" th:field="*{id}" />
 
             <!-- Champ Nom du resto en haut -->
-            <div class="mb-4">
+            <div class="mb-4 text-center bloc-modif-nom">
             <label class="form-label fw-bold">Nom du restaurant</label>
-            <input type="text" class="form-control" th:field="*{nomResto}" required />
+            <input type="text" class="form-control mx-auto" th:field="*{nomResto}" required style="max-width: 300px;" />
             </div>
 
         <div class="row">
 
         <!-- Colonne gauche -->
         <div class="col-md-4">
-            <div class="mb-3">
+            <div class="mb-3 bloc-modif">
                 <label class="form-label">Type de restaurant</label>
                 <input type="text" class="form-control" th:field="*{typeResto}" />
             </div>
-            <div class="mb-3">
+            <div class="mb-3 bloc-modif">
                 <label class="form-label">Adresse</label>
                 <input type="text" class="form-control" th:field="*{adresse}" required />
             </div>
-            <div class="mb-3">
+            <div class="mb-3 bloc-modif">
                 <label class="form-label">Téléphone</label>
                 <input type="text" class="form-control" th:field="*{numeroTel}" />
             </div>
-            <div class="mb-3">
+            <div class="mb-3 bloc-modif">
                 <label class="form-label">Horaires</label>
                 <input type="text" class="form-control" th:field="*{horaire}" />
             </div>
         </div>
 
         <!-- Colonne centre -->
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center bloc-modif">
             <label class="form-label fw-bold">Changer l'image du restaurant</label>
             <input type="file" class="form-control mb-3" name="image" accept="image/*" />
             <div>
@@ -112,7 +112,7 @@
 
       <!-- Colonne droite -->
         <div class="col-md-4 d-flex flex-column justify-content-end align-items-end">
-            <button type="submit" class="btn btn-success mt-auto">Valider les modifications</button>
+            <button type="submit" class="btn-valider mt-auto">Valider les modifications</button>
         </div>
 
         </div>
