--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
     <h2>Tableau de bord</h2>
     <p>Vous êtes connecté.</p>
     <a href="/logout">Se déconnecter</a>
+            <!-- Footer avec copyright -->
+        <footer class="text-center mt-5 mb-3">
+            &copy; 2025 - GourmetGo
+        </footer>
 </body>
 </html>
