--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
     <h2>Bienvenue sur le site</h2>
-    <a href="/login2">Se connecter</a>
+    <a href="/login">Se connecter</a>
+
+            <!-- Footer avec copyright -->
+        <footer class="text-center mt-5 mb-3">
+            &copy; 2025 - GourmetGo
+        </footer>
 </body>
 </html>
