--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
     <title>Document</title>
     <style>
     </style>
@@ -15,39 +16,102 @@
 <body>
     <div class="container mt-5">
         <div class="row">
-
+          <h2></h2>
             <div class="col-md-6">
-                            <h2>Administrateur</h2>
-                            <br>
-                <div class="rectangle">
+                <div class="rectangle-membre">
+                    <p>Vous êtes déjà membre :</p>
                     <form method="post" th:action="@{/login}">
-                        <div class="form-identifiant">
-                            <label for="identifiant">Identifiant:</label>
-                            <input type="text" id="identifiant" name="username" placeholder="Nom d'utilisateur" class="form-control"/>
+                        <div class="form-email">
+                            <label for="email">Email :</label>
+                            <input type="text" id="email" name="email" placeholder="Email" class="form-control"/>
                         </div>
                             <div class="row align-items-center">
                                 <div class="form-mdp col-auto">
                                     <label for="mdp">Mot de passe :</label>
                                 </div>
                                     <div class="col">
-                                        <input type="password" id="mdp" name="password" placeholder="Mot de passe" class="form-control"/>
-                                        <p th:if="${error}" th:text="${error}"></p>
+                                        <div class="bgd-mdp">
+                                            <input type="password" id="mdp" name="motDePasse" placeholder="Mot de passe" class="form-control"/>
+                                            <p th:if="${error}" th:text="${error}"></p>
+                                        </div>
                                     </div>
                             </div>
                             <br>
                             <div class="d-flex justify-content-center">
-                                <button class="btn nav-button" type="submit" text-center>Se connecter</button>
+                                <button class="btn nav-button-membre" type="submit" text-center>Se connecter</button>
                             </div>
                     </form>       
                 </div>
 
             </div>
                 <div class="col-md-6">
-                    <img src="images/logo02.png" alt="Description de l'image" class="img-fluid">
+                    <img src="images/logo.png" alt="Description de l'image" class="img-fluid">
                 </div>
         </div>        
     </div>
+        <div class="container mt-5">
+        <div class="row">
+          <h2></h2>
+            <div class="col-md-6">
+                <div class="rectangle-client">
+                    <p>Pour créer un compte client</p>
+                    <form method="post" th:action="@{/login}">
+                        <div class="form-email">
+                            <label for="email">Email :</label>
+                            <input type="text" id="email" name="email" placeholder="Email" class="form-control"/>
+                        </div>
+                            <div class="row align-items-center">
+                                <div class="form-mdp col-auto">
+                                    <label for="mdp">Mot de passe :</label>
+                                </div>
+                                    <div class="col">
+                                        <div class="bgd-mdp">
+                                            <input type="password" id="mdp" name="motDePasse" placeholder="Mot de passe" class="form-control"/>
+                                            <p th:if="${error}" th:text="${error}"></p>
+                                        </div>
+                                    </div>
+                            </div>
+                            <br>
+                            <div class="d-flex justify-content-center">
+                                <button class="btn nav-button-client" type="submit" text-center>Créer le compte</button>
+                            </div>
+                    </form>       
+                </div>
 
+            </div>
+                <div class="col-md-6">
+                <div class="rectangle-restaurant">
+                    <p>Pour créer un compte restaurant :</p>
+                    <form method="post" th:action="@{/login}">
+                        <div class="form-email">
+                            <label for="email">Email :</label>
+                            <input type="text" id="email" name="email" placeholder="Email" class="form-control"/>
+                        </div>
+                            <div class="row align-items-center">
+                                <div class="form-mdp col-auto">
+                                    <label for="mdp">Mot de passe :</label>
+                                </div>
+                                    <div class="col">
+                                        <div class="bgd-mdp">
+                                            <input type="password" id="mdp" name="motDePasse" placeholder="Mot de passe" class="form-control"/>
+                                            <p th:if="${error}" th:text="${error}"></p>
+                                        </div>
+                                    </div>
+                            </div>
+                            <br>
+                            <div class="d-flex justify-content-center">
+                                <button class="btn nav-button-restaurant" type="submit" text-center>Créer le compte</button>
+                            </div>
+                    </form>       
+                </div>
+
+            </div>
+        </div>        
+    </div>
+        <!-- Footer avec copyright -->
+        <footer class="text-center mt-5 mb-3">
+            &copy; 2025 - GourmetGo
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
