--- a/src/main/resources/templates/edit_restaurant.html
+++ b/src/main/resources/templates/edit_restaurant.html
@@ -106,7 +106,7 @@
             <label class="form-label fw-bold">Changer l'image du restaurant</label>
             <input type="file" class="form-control mb-3" name="image" accept="image/*" />
             <div>
-                <img th:src="@{${restaurant.imagePath}}" alt="Image actuelle" class="img-fluid rounded shadow-sm" style="max-height: 200px;" />
+                <img th:src="@{${restaurant.imageResto}}" alt="Image actuelle" class="img-fluid rounded shadow-sm" style="max-height: 200px;" />
             </div>
         </div>
 
