--- a/src/main/resources/templates/accueilGR.html
+++ b/src/main/resources/templates/accueilGR.html
@@ -15,13 +15,13 @@
 
     <main class="flex-grow-1">
     <!-- Titre centré -->
-    <div class="titrepage text-center py-1">
+    <div class="titrepage text-center py-1 fixed-top">
         <h3>Tableau de bord</h3>
     </div>
 
     <!-- PREMIERE NAVBAR -->
     <!-- à placer en dehors du container pour prendre toute la page -->
-    <nav class="navbar navbar-expand-md navbar-custom py-1">
+    <nav class="navbar navbar-expand-md navbar-custom py-1 fixed-top" style="top: 48px">
         <div class="container-fluid justify-content-between">
 
             <!-- Bouton burger -->
@@ -44,7 +44,7 @@
     </nav>
 
     <!-- DEUXIEME NAV BAR -->
-    <nav class="navbar navbar-expand-md navbar-custom2 py-1">
+    <nav class="navbar navbar-expand-md navbar-custom2 py-1 fixed-top" style="top: 96px">
         <div class="container-fluid justify-content-between">
             <!-- Bouton burger -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
@@ -55,8 +55,8 @@
             <!-- Contenu à cacher/afficher -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarButtons">
                 <div class="d-flex flex-column flex-md-row gap-2 mt-3 mt-md-0">
-                    <a href="/admin/restaurants" class="btn button-accueilGR">Créer un compte restaurant</a>
-                    <a href="/admin/clients" class="btn button-accueilGR">Rechercher un restaurant</a>
+                    <a href="/admin/restaurants/formulaire" class="btn button-accueilGR">Créer un compte restaurant</a>
+                    <a href="" class="btn button-accueilGR">Rechercher un restaurant</a>
                     <a href="/admin/list" class="btn button-accueilGR">Liste des restaurants</a>
                 </div>
             </div>
