--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -15,13 +15,13 @@
 
     <main class="flex-grow-1">
     <!-- Titre centré -->
-    <div class="titrepage text-center py-1">
+    <div class="titrepage text-center py-1 fixed-top">
         <h3>Tableau de bord</h3>
     </div>
 
     <!-- PREMIERE NAVBAR -->
     <!-- à placer en dehors du container pour prendre toute la page -->
-    <nav class="navbar navbar-expand-md navbar-custom py-1">
+    <nav class="navbar navbar-expand-md navbar-custom py-1 fixed-top" style="top: 48px">
         <div class="container-fluid justify-content-between">
 
             <!-- Bouton burger -->
