--- a/src/main/resources/templates/liste_restaurant.html
+++ b/src/main/resources/templates/liste_restaurant.html
@@ -16,13 +16,13 @@
     <main class="flex-grow-1">
 
     <!-- Titre centré -->
-    <div class="titrepage text-center py-1">
+    <div class="titrepage text-center py-1 fixed-top">
         <h3>Tableau de bord</h3>
     </div>
 
     <!-- NAVBAR -->
     <!-- à placer en dehors du container pour prendre toute la page -->
-    <nav class="navbar navbar-expand-md navbar-custom py-1">
+    <nav class="navbar navbar-expand-md navbar-custom py-1 fixed-top" style="top: 48px">
         <div class="container-fluid justify-content-between">
 
             <!-- Bouton burger -->
@@ -45,7 +45,7 @@
     </nav>
 
     <!-- DEUXIEME NAV BAR -->
-    <nav class="navbar navbar-expand-md navbar-custom2 py-1">
+    <nav class="navbar navbar-expand-md navbar-custom2 py-1 fixed-top" style="top: 96px">
         <div class="container-fluid justify-content-between">
             <!-- Bouton burger -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
@@ -71,7 +71,6 @@
                 <tr>
                     <th>Nom</th>
                     <th>Adresse</th>
-                    <th>Horaire</th>
                     <th>Téléphone</th>
                     <th>Type Resto</th>
                 </tr>
@@ -81,9 +80,11 @@
                     <td>
                         <a th:href="@{/admin/list/{id}(id=${resto.id})}" th:text="${resto.nomResto}"></a>
                     </td>
-                    <td th:text="${resto.adresse}"></td>
-                    <td th:text="${resto.horaire}"></td>
-                    <td th:text="${resto.numeroTel}"></td>
+                    <td th:text="${resto.numRue}"></td>
+                    <td th:text="${resto.nomRue}"></td>
+                    <td th:text="${resto.codePostal}"></td>
+                    <td th:text="${resto.ville}"></td>
+                    <td th:text="${resto.telResto}"></td>
                     <td th:text="${resto.typeResto}"></td>
                 </tr>
             </tbody>
