--- a/src/main/resources/templates/formulaire.html
+++ b/src/main/resources/templates/formulaire.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Inscription Restaurant</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon">
   <style>
     body {
       background-color: #B8CBD0;
@@ -55,7 +60,59 @@
     }
   </style>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
+
+  <main class="flex-grow-1">
+  
+    <!-- Titre centré -->
+    <div class="titrepage text-center py-1 fixed-top">
+        <h3>Tableau de bord</h3>
+    </div>
+
+    <!-- PREMIERE NAVBAR -->
+    <!-- à placer en dehors du container pour prendre toute la page -->
+    <nav class="navbar navbar-expand-md navbar-custom py-1 fixed-top" style="top: 48px">
+        <div class="container-fluid justify-content-between">
+
+            <!-- Bouton burger -->
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
+            aria-controls="navbarButtons" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Contenu à cacher/afficher -->
+            <div class="collapse navbar-collapse justify-content-center" id="navbarButtons">
+                <div class="d-flex flex-column flex-md-row gap-2 mt-3 mt-md-0">
+                    <a href="/admin/restaurants" class="btn nav-button">Gestion restaurants</a>
+                    <a href="/admin/clients" class="btn nav-button">Gestion clients</a>
+                    <a href="/admin/commandes" class="btn nav-button">Gestion commandes</a>
+                    <a href="/admin/statistiques" class="btn nav-button">Statistiques</a>
+                    <a href="/logout" class="btn btn-deconnexion">Déconnexion</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- DEUXIEME NAV BAR -->
+    <nav class="navbar navbar-expand-md navbar-custom2 py-1 fixed-top" style="top: 96px">
+        <div class="container-fluid justify-content-between">
+            <!-- Bouton burger -->
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
+            aria-controls="navbarButtons" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Contenu à cacher/afficher -->
+            <div class="collapse navbar-collapse justify-content-center" id="navbarButtons">
+                <div class="d-flex flex-column flex-md-row gap-2 mt-3 mt-md-0">
+                    <a href="/admin/restaurants/formulaire" class="btn button-accueilGR">Créer un compte restaurant</a>
+                    <a href="/admin/clients" class="btn button-accueilGR">Rechercher un restaurant</a>
+                    <a href="/admin/list" class="btn button-accueilGR">Liste des restaurants</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
   <div class="container mt-5">
     
     <form action="/admin/formulaire" method="post" class="p-4 shadow rounded" th:object="${restaurant}" enctype="multipart/form-data">
@@ -79,22 +136,22 @@
               <option value="" disabled th:selected="${restaurant.typeResto == null or restaurant.typeResto == ''}">
                 -- Choisissez un type --
               </option>
-              <option value="Italien">Vietnamien Spécialité Haumont</option>
-              <option value="Français">Grec</option>
-              <option value="Mexicain">Libanais</option>
-              <option value="Chinois">Dessert</option>
+              <option value="Vietnamien">Vietnamien Spécialité Haumont</option>
+              <option value="Grec">Grec</option>
+              <option value="Libanais">Libanais</option>
+              <option value="Dessert">Dessert</option>
               <option value="Italien">Italien</option>
-              <option value="Français">Halal</option>
-              <option value="Mexicain">Thaï</option>
-              <option value="Chinois">Indien</option>
-              <option value="Italien">Mexicain</option>
-              <option value="Français">Japonais</option>
-              <option value="Mexicain">Chinois</option>
-              <option value="Chinois">Petit Déjeuner</option>
-              <option value="Italien">Végétarien</option>
-              <option value="Français">Sushi</option>
-              <option value="Mexicain">Américain</option>
-              <option value="Chinois">Pizza</option>
+              <option value="Halal">Halal</option>
+              <option value="Thaï">Thaï</option>
+              <option value="Indien">Indien</option>
+              <option value="Mexicain">Mexicain</option>
+              <option value="Japonais">Japonais</option>
+              <option value="Chinois">Chinois</option>
+              <option value="Petit Déjeuner">Petit Déjeuner</option>
+              <option value="Végétarien">Végétarien</option>
+              <option value="Sushi">Sushi</option>
+              <option value="Américain">Américain</option>
+              <option value="Pizza">Pizza</option>
               <option value="Autre">Autre</option>
             </select>
             <div class="text-danger" th:if="${#fields.hasErrors('typeResto')}" th:errors="*{typeResto}"></div>
@@ -182,11 +239,15 @@
     </form>
   </div>
   
+  </main>
   <!-- Footer -->
   <footer class="text-center mt-5 mb-3">
     &copy; 2025 - GourmetGo
   </footer>
-  
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   <script>
     document.getElementById("codePostal").addEventListener("blur", function() {
       var cp = this.value.trim();
