--- a/src/main/resources/templates/liste_restaurant.html
+++ b/src/main/resources/templates/liste_restaurant.html
@@ -56,7 +56,7 @@
             <!-- Contenu à cacher/afficher -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarButtons">
                 <div class="d-flex flex-column flex-md-row gap-2 mt-3 mt-md-0">
-                    <<a href="/admin/restaurants/formulaire" class="btn button-accueilGR">Créer un compte restaurant</a>
+                    <a href="/admin/restaurants/formulaire" class="btn button-accueilGR">Créer un compte restaurant</a>
                     <a href="/admin/clients" class="btn button-accueilGR">Rechercher un restaurant</a>
                     <a href="/admin/list" class="btn button-accueilGR">Liste des restaurants</a>
                 </div>
